examples/checker_tests/good/coree.p4
extern packet_in {
bit<32> length();
}
