examples/checker_tests/bad/dupfields-header.p4
header hdr {
    bit<8> g;
    bit<8> g;
}